Intent to Register OK

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin">50dp</dimen>
+    <dimen name="dialog_bg_radius">20dp</dimen>
+    <dimen name="dialog_button_radius">100dp</dimen>
 </resources>
