--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
 			android:clickable="true"
 			android:id="@+id/txtNewRegister"
 			android:textColor="@color/colorPrimaryDark"
-			android:text="New Register"
+			android:text="@string/new_register"
 			android:layout_width="wrap_content"
 			android:layout_height="match_parent" />
 
