--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="dialog_button_radius">100dp</dimen>
     <dimen name="padding">20dp</dimen>
     <dimen name="h1">20sp</dimen>
+    <dimen name="h2">20sp</dimen>
 </resources>
