--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context="fetl.chatveeratham.yothin.fetlqrcode.ServiceActivity">
 
+
+
     <RelativeLayout
         android:id="@+id/relTop"
         android:layout_width="match_parent"
@@ -15,6 +17,7 @@
         android:padding="@dimen/padding">
 
         <TextView
+            android:id="@+id/txtNameLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
@@ -28,16 +31,16 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:paddingRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/imvBarCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:src="@mipmap/ic_bar" />
+                    android:src="@mipmap/ic_bar2" />
 
                 <TextView
                     android:layout_gravity="center"
@@ -49,15 +52,17 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/imvQrCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:src="@mipmap/ic_qr" />
+                    android:src="@mipmap/ic_qr2" />
 
                 <TextView
                     android:layout_gravity="center"
@@ -73,5 +78,9 @@
 
     </RelativeLayout>
 
+    <ListView
+        android:id="@+id/livProduct"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
