--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="dialog_bg_radius">20dp</dimen>
     <dimen name="dialog_button_radius">100dp</dimen>
     <dimen name="padding">20dp</dimen>
-    <dimen name="h1">20sp</dimen>
+    <dimen name="h1">30sp</dimen>
     <dimen name="h2">20sp</dimen>
+    <dimen name="icon">120dp</dimen>
+    <dimen name="margin1">15dp</dimen>
 </resources>
