--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,11 +14,13 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/imvBack"
             android:src="@mipmap/ic_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/txtTitle"
             android:textColor="@color/white"
             android:layout_centerInParent="true"
             android:text="Name"
@@ -36,8 +38,9 @@
         android:padding="@dimen/padding">
 
         <ImageView
+            android:id="@+id/imvImage"
             android:scaleType="fitCenter"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
@@ -52,6 +55,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/txtDetail"
                     android:text="Detail"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/h2"
